--- a/Flint2-Examples.cabal
+++ b/Flint2-Examples.cabal
@@ -40,27 +40,6 @@ library
     , timeit
   default-language: Haskell2010
 
-executable arb_plot
-  main-is: Main.hs
-  other-modules:
-      ColorFunction
-      Functions
-      Paths_Flint2_Examples
-  hs-source-dirs:
-      app/arb_plot
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      Flint2
-    , JuicyPixels
-    , base >=4.7 && <5
-    , containers
-    , gloss
-    , gloss-juicy
-    , mtl
-    , optparse-applicative
-    , timeit
-  default-language: Haskell2010
-
 executable bernoulli
   main-is: Main.hs
   other-modules:
@@ -74,6 +53,58 @@ executable bernoulli
     , mtl
     , optparse-applicative
     , time
+    , timeit
+  default-language: Haskell2010
+
+executable class_poly
+  main-is: Main.hs
+  other-modules:
+      Paths_Flint2_Examples
+  hs-source-dirs:
+      app/class_poly
+  build-depends:
+      Flint2
+    , base >=4.7 && <5
+    , containers
+    , mtl
+    , optparse-applicative
+    , time
+    , timeit
+  default-language: Haskell2010
+
+executable complex_plot
+  main-is: Main.hs
+  other-modules:
+      ColorFunction
+      Functions
+      Paths_Flint2_Examples
+  hs-source-dirs:
+      app/complex_plot
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      Flint2
+    , JuicyPixels
+    , base >=4.7 && <5
+    , containers
+    , gloss
+    , gloss-juicy
+    , mtl
+    , optparse-applicative
+    , timeit
+  default-language: Haskell2010
+
+executable delta_qexp
+  main-is: Main.hs
+  other-modules:
+      Paths_Flint2_Examples
+  hs-source-dirs:
+      app/delta_qexp
+  build-depends:
+      Flint2
+    , base >=4.7 && <5
+    , containers
+    , mtl
+    , optparse-applicative
     , timeit
   default-language: Haskell2010
 
