--- a/package.yaml
+++ b/package.yaml
@@ -53,6 +53,9 @@ executables:
   delta_qexp:
     source-dirs: app/delta_qexp
     main: Main.hs
+  fmpz_poly_factor_zassenhaus:
+    source-dirs: app/fmpz_poly_factor_zassenhaus
+    main: Main.hs
   l_values:
     source-dirs: app/l_values 
     main: Main.hs
