--- a/stack.yaml
+++ b/stack.yaml
@@ -65,6 +65,7 @@ packages:
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
+local-bin-path: /Users/monien/.local/bin/flint
 extra-deps:
 - git: https://github.com/hpacheco/gloss-juicy.git
   commit: acbdfd864b7e574dfbe1595fbdcd154563b2a0ef
