--- a/stack.yaml
+++ b/stack.yaml
@@ -69,5 +69,6 @@ local-bin-path: /Users/monien/.local/bin/flint
 extra-deps:
 - git: https://github.com/hpacheco/gloss-juicy.git
   commit: acbdfd864b7e574dfbe1595fbdcd154563b2a0ef
-- git: https://github.com/monien/Flint2.git
-  commit: 8d1c631a8092b7b603dde30fc1aea16385528080
+# - git: https://github.com/monien/Flint2.git
+#   commit: b80edb09b36ae4c5ecc89cc2f341628bb60ec014
+- ../Flint2 
