--- a/stack.yaml
+++ b/stack.yaml
@@ -65,10 +65,11 @@ packages:
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
+#
+# Install in local flint library
 local-bin-path: /Users/monien/.local/bin/flint
 extra-deps:
 - git: https://github.com/hpacheco/gloss-juicy.git
   commit: acbdfd864b7e574dfbe1595fbdcd154563b2a0ef
-# - git: https://github.com/monien/Flint2.git
-#   commit: b80edb09b36ae4c5ecc89cc2f341628bb60ec014
+# local development version of Flint
 - ../Flint2 
