--- a/Flint2-Examples.cabal
+++ b/Flint2-Examples.cabal
@@ -46,6 +46,7 @@ executable bernoulli
       Paths_Flint2_Examples
   hs-source-dirs:
       app/bernoulli
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -221,6 +222,7 @@ executable integrals
       Paths_Flint2_Examples
   hs-source-dirs:
       app/integrals
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       Flint2
     , base >=4.7 && <5
