--- a/package.yaml
+++ b/package.yaml
@@ -35,6 +35,7 @@ executables:
     source-dirs: app/bernoulli
     main: Main.hs
     dependencies: time
+    ghc-options: -threaded -rtsopts -with-rtsopts=-N
   class_poly:
     source-dirs: app/class_poly
     main: Main.hs
@@ -72,6 +73,7 @@ executables:
   integrals:
     source-dirs: app/integrals
     main: Main.hs
+    ghc-options: -threaded -rtsopts -with-rtsopts=-N
   l_values:
     source-dirs: app/l_values 
     main: Main.hs
