--- a/Flint2-Examples.cabal
+++ b/Flint2-Examples.cabal
@@ -262,6 +262,36 @@ executable l_values
     , timeit
   default-language: Haskell2010
 
+executable padic
+  main-is: Main.hs
+  other-modules:
+      Paths_Flint2_Examples
+  hs-source-dirs:
+      app/padic
+  build-depends:
+      Flint2
+    , base >=4.7 && <5
+    , containers
+    , mtl
+    , optparse-applicative
+    , timeit
+  default-language: Haskell2010
+
+executable partitions
+  main-is: Main.hs
+  other-modules:
+      Paths_Flint2_Examples
+  hs-source-dirs:
+      app/partitions
+  build-depends:
+      Flint2
+    , base >=4.7 && <5
+    , containers
+    , mtl
+    , optparse-applicative
+    , timeit
+  default-language: Haskell2010
+
 executable pi_digits
   main-is: Main.hs
   other-modules:
@@ -283,6 +313,21 @@ executable primegen
       Paths_Flint2_Examples
   hs-source-dirs:
       app/primegen
+  build-depends:
+      Flint2
+    , base >=4.7 && <5
+    , containers
+    , mtl
+    , optparse-applicative
+    , timeit
+  default-language: Haskell2010
+
+executable stirling_matrix
+  main-is: Main.hs
+  other-modules:
+      Paths_Flint2_Examples
+  hs-source-dirs:
+      app/stirling_matrix
   build-depends:
       Flint2
     , base >=4.7 && <5
