--- a/Flint2-Examples.cabal
+++ b/Flint2-Examples.cabal
@@ -322,6 +322,21 @@ executable primegen
     , timeit
   default-language: Haskell2010
 
+executable qadic
+  main-is: Main.hs
+  other-modules:
+      Paths_Flint2_Examples
+  hs-source-dirs:
+      app/qadic
+  build-depends:
+      Flint2
+    , base >=4.7 && <5
+    , containers
+    , mtl
+    , optparse-applicative
+    , timeit
+  default-language: Haskell2010
+
 executable stirling_matrix
   main-is: Main.hs
   other-modules:
