--- a/Flint2-Examples.cabal
+++ b/Flint2-Examples.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.35.1.
+-- This file has been generated from package.yaml by hpack version 0.35.2.
 --
 -- see: https://github.com/sol/hpack
 
@@ -54,6 +54,36 @@ executable bernoulli
     , mtl
     , optparse-applicative
     , time
+    , timeit
+  default-language: Haskell2010
+
+executable binet
+  main-is: Main.hs
+  other-modules:
+      Paths_Flint2_Examples
+  hs-source-dirs:
+      app/binet
+  build-depends:
+      Flint2
+    , base >=4.7 && <5
+    , containers
+    , mtl
+    , optparse-applicative
+    , timeit
+  default-language: Haskell2010
+
+executable calcium
+  main-is: Main.hs
+  other-modules:
+      Paths_Flint2_Examples
+  hs-source-dirs:
+      app/calcium
+  build-depends:
+      Flint2
+    , base >=4.7 && <5
+    , containers
+    , mtl
+    , optparse-applicative
     , timeit
   default-language: Haskell2010
 
@@ -223,6 +253,21 @@ executable integrals
   hs-source-dirs:
       app/integrals
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      Flint2
+    , base >=4.7 && <5
+    , containers
+    , mtl
+    , optparse-applicative
+    , timeit
+  default-language: Haskell2010
+
+executable keiper_li
+  main-is: Main.hs
+  other-modules:
+      Paths_Flint2_Examples
+  hs-source-dirs:
+      app/keiper_li
   build-depends:
       Flint2
     , base >=4.7 && <5
