--- a/Flint2-Examples.cabal
+++ b/Flint2-Examples.cabal
@@ -307,6 +307,21 @@ executable l_values
     , timeit
   default-language: Haskell2010
 
+executable machin
+  main-is: Main.hs
+  other-modules:
+      Paths_Flint2_Examples
+  hs-source-dirs:
+      app/machin
+  build-depends:
+      Flint2
+    , base >=4.7 && <5
+    , containers
+    , mtl
+    , optparse-applicative
+    , timeit
+  default-language: Haskell2010
+
 executable padic
   main-is: Main.hs
   other-modules:
