--- a/package.yaml
+++ b/package.yaml
@@ -101,6 +101,9 @@ executables:
   keiper_li:
     source-dirs: app/keiper_li
     main: Main.hs
+  logistic:
+    source-dirs: app/logistic
+    main: Main.hs
   machin:
     source-dirs: app/machin
     main: Main.hs
