--- a/Flint2-Examples.cabal
+++ b/Flint2-Examples.cabal
@@ -214,6 +214,21 @@ executable fmpq_poly
     , timeit
   default-language: Haskell2010
 
+executable fmpz_mod_poly
+  main-is: Main.hs
+  other-modules:
+      Paths_Flint2_Examples
+  hs-source-dirs:
+      app/fmpz_mod_poly
+  build-depends:
+      Flint2
+    , base >=4.7 && <5
+    , containers
+    , mtl
+    , optparse-applicative
+    , timeit
+  default-language: Haskell2010
+
 executable fmpz_mpoly_factor
   main-is: Main.hs
   other-modules:
@@ -266,6 +281,22 @@ executable fq_poly
       Paths_Flint2_Examples
   hs-source-dirs:
       app/fq_poly
+  build-depends:
+      Flint2
+    , base >=4.7 && <5
+    , containers
+    , mtl
+    , optparse-applicative
+    , timeit
+  default-language: Haskell2010
+
+executable function_benchmark
+  main-is: Main.hs
+  other-modules:
+      Paths_Flint2_Examples
+  hs-source-dirs:
+      app/function_benchmark
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -478,6 +509,21 @@ executable qadic
       Paths_Flint2_Examples
   hs-source-dirs:
       app/qadic
+  build-depends:
+      Flint2
+    , base >=4.7 && <5
+    , containers
+    , mtl
+    , optparse-applicative
+    , timeit
+  default-language: Haskell2010
+
+executable radix
+  main-is: Main.hs
+  other-modules:
+      Paths_Flint2_Examples
+  hs-source-dirs:
+      app/radix
   build-depends:
       Flint2
     , base >=4.7 && <5
