--- a/package.yaml
+++ b/package.yaml
@@ -72,6 +72,9 @@ executables:
   fmpq_poly:
     source-dirs: app/fmpq_poly
     main: Main.hs
+  fmpz_mod_poly:
+    source-dirs: app/fmpz_mod_poly
+    main: Main.hs
   fmpz_mpoly_factor:
     source-dirs: app/fmpz_mpoly_factor
     main: Main.hs
@@ -85,6 +88,10 @@ executables:
   fq_poly:
     source-dirs: app/fq_poly
     main: Main.hs
+  function_benchmark:
+    source-dirs: app/function_benchmark
+    main: Main.hs
+    ghc-options: -threaded -rtsopts -with-rtsopts=-N
   integrals:
     source-dirs: app/integrals
     main: Main.hs
@@ -130,6 +137,9 @@ executables:
     main: Main.hs
   stirling_matrix:
     source-dirs: app/stirling_matrix
+    main: Main.hs
+  radix:
+    source-dirs: app/radix
     main: Main.hs
   swinnerton_dyer_poly:
     source-dirs: app/swinnerton_dyer_poly
