complete version ... testing in calcium.

--- a/Flint2-Examples.cabal
+++ b/Flint2-Examples.cabal
@@ -31,6 +31,7 @@ library
       Paths_Flint2_Examples
   hs-source-dirs:
       src
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -46,7 +47,7 @@ executable bernoulli
       Paths_Flint2_Examples
   hs-source-dirs:
       app/bernoulli
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -dynamic -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -63,6 +64,7 @@ executable binet
       Paths_Flint2_Examples
   hs-source-dirs:
       app/binet
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -75,9 +77,11 @@ executable binet
 executable calcium
   main-is: Main.hs
   other-modules:
+      Builtin
       Paths_Flint2_Examples
   hs-source-dirs:
       app/calcium
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -93,6 +97,7 @@ executable class_poly
       Paths_Flint2_Examples
   hs-source-dirs:
       app/class_poly
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -111,7 +116,7 @@ executable complex_plot
       Paths_Flint2_Examples
   hs-source-dirs:
       app/complex_plot
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -dynamic -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       Flint2
     , JuicyPixels
@@ -130,6 +135,7 @@ executable crt
       Paths_Flint2_Examples
   hs-source-dirs:
       app/crt
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -145,6 +151,7 @@ executable delta_qexp
       Paths_Flint2_Examples
   hs-source-dirs:
       app/delta_qexp
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -160,6 +167,7 @@ executable dft
       Paths_Flint2_Examples
   hs-source-dirs:
       app/dft
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -175,6 +183,7 @@ executable elementary
       Paths_Flint2_Examples
   hs-source-dirs:
       app/elementary
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -190,6 +199,7 @@ executable factor_integer
       Paths_Flint2_Examples
   hs-source-dirs:
       app/factor_integer
+  ghc-options: -dynamic -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -205,6 +215,7 @@ executable fmpq_poly
       Paths_Flint2_Examples
   hs-source-dirs:
       app/fmpq_poly
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -220,6 +231,7 @@ executable fmpz_mod_poly
       Paths_Flint2_Examples
   hs-source-dirs:
       app/fmpz_mod_poly
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -235,6 +247,7 @@ executable fmpz_mpoly_factor
       Paths_Flint2_Examples
   hs-source-dirs:
       app/fmpz_mpoly_factor
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -251,6 +264,7 @@ executable fmpz_poly_factor_zassenhaus
       Paths_Flint2_Examples
   hs-source-dirs:
       app/fmpz_poly_factor_zassenhaus
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -266,6 +280,7 @@ executable fpwrap
       Paths_Flint2_Examples
   hs-source-dirs:
       app/fpwrap
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -281,6 +296,7 @@ executable fq_poly
       Paths_Flint2_Examples
   hs-source-dirs:
       app/fq_poly
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -296,7 +312,7 @@ executable function_benchmark
       Paths_Flint2_Examples
   hs-source-dirs:
       app/function_benchmark
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -dynamic -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -312,6 +328,7 @@ executable hilbert_matrix
       Paths_Flint2_Examples
   hs-source-dirs:
       app/hilbert_matrix
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -327,6 +344,7 @@ executable hilbert_matrix_ca
       Paths_Flint2_Examples
   hs-source-dirs:
       app/hilbert_matrix_ca
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -343,7 +361,7 @@ executable integrals
       Paths_Flint2_Examples
   hs-source-dirs:
       app/integrals
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -dynamic -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -359,6 +377,7 @@ executable keiper_li
       Paths_Flint2_Examples
   hs-source-dirs:
       app/keiper_li
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -374,6 +393,7 @@ executable l_central
       Paths_Flint2_Examples
   hs-source-dirs:
       app/l_values
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -389,6 +409,7 @@ executable l_values
       Paths_Flint2_Examples
   hs-source-dirs:
       app/l_values
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -404,6 +425,7 @@ executable logistic
       Paths_Flint2_Examples
   hs-source-dirs:
       app/logistic
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -419,6 +441,7 @@ executable machin
       Paths_Flint2_Examples
   hs-source-dirs:
       app/machin
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -434,6 +457,7 @@ executable multi_crt
       Paths_Flint2_Examples
   hs-source-dirs:
       app/multi_crt
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -449,6 +473,7 @@ executable padic
       Paths_Flint2_Examples
   hs-source-dirs:
       app/padic
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -464,6 +489,7 @@ executable partitions
       Paths_Flint2_Examples
   hs-source-dirs:
       app/partitions
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -479,6 +505,23 @@ executable pi_digits
       Paths_Flint2_Examples
   hs-source-dirs:
       app/pi_digits
+  ghc-options: -dynamic -O2
+  build-depends:
+      Flint2
+    , base >=4.7 && <5
+    , containers
+    , mtl
+    , optparse-applicative
+    , timeit
+  default-language: Haskell2010
+
+executable poly_roots
+  main-is: Main.hs
+  other-modules:
+      Paths_Flint2_Examples
+  hs-source-dirs:
+      app/poly_roots
+  ghc-options: -dynamic -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -494,6 +537,7 @@ executable primegen
       Paths_Flint2_Examples
   hs-source-dirs:
       app/primegen
+  ghc-options: -dynamic -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -509,6 +553,7 @@ executable qadic
       Paths_Flint2_Examples
   hs-source-dirs:
       app/qadic
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -524,6 +569,30 @@ executable radix
       Paths_Flint2_Examples
   hs-source-dirs:
       app/radix
+  ghc-options: -dynamic -O2
+  build-depends:
+      Flint2
+    , base >=4.7 && <5
+    , containers
+    , mtl
+    , optparse-applicative
+    , timeit
+  default-language: Haskell2010
+
+executable real_roots
+  main-is: Main.hs
+  other-modules:
+      FFI
+      Functions
+      Run
+      Paths_Flint2_Examples
+  hs-source-dirs:
+      app/real_roots
+  ghc-options: -dynamic -O2
+  include-dirs:
+      app/real_roots
+  install-includes:
+      app/real_roots/z_param.h
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -539,6 +608,7 @@ executable stirling_matrix
       Paths_Flint2_Examples
   hs-source-dirs:
       app/stirling_matrix
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -554,6 +624,7 @@ executable swinnerton_dyer_poly
       Paths_Flint2_Examples
   hs-source-dirs:
       app/swinnerton_dyer_poly
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -569,6 +640,7 @@ executable taylor_integrals
       Paths_Flint2_Examples
   hs-source-dirs:
       app/taylor_integrals
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -584,6 +656,7 @@ executable zeta_zeros
       Paths_Flint2_Examples
   hs-source-dirs:
       app/zeta_zeros
+  ghc-options: -dynamic -O2
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -600,7 +673,7 @@ test-suite Flint2-Examples-test
       Paths_Flint2_Examples
   hs-source-dirs:
       test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -dynamic -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       Flint2
     , Flint2-Examples
