--- a/Flint2-Examples.cabal
+++ b/Flint2-Examples.cabal
@@ -1,4 +1,4 @@
-cabal-version: 1.12
+cabal-version: 1.18
 
 -- This file has been generated from package.yaml by hpack version 0.35.2.
 --
@@ -19,6 +19,8 @@ build-type:     Simple
 extra-source-files:
     README.md
     CHANGELOG.md
+extra-doc-files:
+    docs/out.png
 
 source-repository head
   type: git
