added choice for file extension in complex_plot.

--- a/Flint2-Examples.cabal
+++ b/Flint2-Examples.cabal
@@ -120,6 +120,7 @@ executable complex_plot
     , JuicyPixels
     , base >=4.7 && <5
     , containers
+    , filepath
     , gloss
     , gloss-juicy
     , mtl
