--- a/package.yaml
+++ b/package.yaml
@@ -55,6 +55,7 @@ executables:
       - JuicyPixels
       - gloss
       - gloss-juicy
+      - filepath
     ghc-options: -threaded -rtsopts -with-rtsopts=-N
   crt:
     source-dirs: app/crt
