--- a/Flint2-Examples.cabal
+++ b/Flint2-Examples.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 
--- This file has been generated from package.yaml by hpack version 0.35.2.
+-- This file has been generated from package.yaml by hpack version 0.35.1.
 --
 -- see: https://github.com/sol/hpack
 
@@ -66,21 +66,6 @@ executable binet
       Paths_Flint2_Examples
   hs-source-dirs:
       app/binet
-  build-depends:
-      Flint2
-    , base >=4.7 && <5
-    , containers
-    , mtl
-    , optparse-applicative
-    , timeit
-  default-language: Haskell2010
-
-executable calcium
-  main-is: Main.hs
-  other-modules:
-      Paths_Flint2_Examples
-  hs-source-dirs:
-      app/calcium
   build-depends:
       Flint2
     , base >=4.7 && <5
@@ -179,6 +164,21 @@ executable elementary
       Paths_Flint2_Examples
   hs-source-dirs:
       app/elementary
+  build-depends:
+      Flint2
+    , base >=4.7 && <5
+    , containers
+    , mtl
+    , optparse-applicative
+    , timeit
+  default-language: Haskell2010
+
+executable expression
+  main-is: Main.hs
+  other-modules:
+      Paths_Flint2_Examples
+  hs-source-dirs:
+      app/expression
   build-depends:
       Flint2
     , base >=4.7 && <5
